--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -2,7 +2,9 @@
     ViewData["Title"] = "Home Page";
 }
 
+<img src="~/imgs/banner.png" width="1350" />
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">Instituto Superior De Profesorado N°20</h1>
+    <p>Nuestro Sitio <a href="https://www.isp20.edu.ar">Click Aqui</a>.</p>
+
 </div>
