--- a/Views/Inscripciones/Create.cshtml
+++ b/Views/Inscripciones/Create.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
+<h1>Crear</h1>
 
 <h4>Inscripcion</h4>
 <hr />
@@ -19,11 +19,11 @@
             </div>
             <div class="form-group">
                 <label asp-for="AlumnoId" class="control-label"></label>
-                <select asp-for="AlumnoId" class ="form-control" asp-items="ViewBag.AlumnoId"></select>
+                <select asp-for="AlumnoId" class ="form-control" asp-items="ViewBag.Alumnos"></select>
             </div>
             <div class="form-group">
                 <label asp-for="CarreraId" class="control-label"></label>
-                <select asp-for="CarreraId" class ="form-control" asp-items="ViewBag.CarreraId"></select>
+                <select asp-for="CarreraId" class ="form-control" asp-items="ViewBag.Carreras"></select>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
