--- a/Views/Inscripciones/Delete.cshtml
+++ b/Views/Inscripciones/Delete.cshtml
@@ -4,9 +4,9 @@
     ViewData["Title"] = "Delete";
 }
 
-<h1>Delete</h1>
+<h1>Eliminar</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>¿Está seguro que desea eliminar esta inscripcion?</h3>
 <div>
     <h4>Inscripcion</h4>
     <hr />
@@ -21,13 +21,13 @@
             @Html.DisplayNameFor(model => model.Alumno)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Alumno.Id)
+            @Html.DisplayFor(model => model.Alumno.ApellidoNombre)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Carrera)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Carrera.id)
+            @Html.DisplayFor(model => model.Carrera.Nombre)
         </dd>
     </dl>
     
