--- a/Views/Inscripciones/Details.cshtml
+++ b/Views/Inscripciones/Details.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Details";
 }
 
-<h1>Details</h1>
+<h1>Detalles</h1>
 
 <div>
     <h4>Inscripcion</h4>
@@ -14,19 +14,19 @@
             @Html.DisplayNameFor(model => model.Fecha)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Fecha)
+            @Model.Fecha.ToString("dd/MM/yyyy")
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Alumno)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Alumno.Id)
+            @Html.DisplayFor(model => model.Alumno.ApellidoNombre)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Carrera)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Carrera.id)
+            @Html.DisplayFor(model => model.Carrera.Nombre)
         </dd>
     </dl>
 </div>
