--- a/Views/Inscripciones/Edit.cshtml
+++ b/Views/Inscripciones/Edit.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Edit";
 }
 
-<h1>Edit</h1>
+<h1>Editar</h1>
 
 <h4>Inscripcion</h4>
 <hr />
@@ -15,17 +15,17 @@
             <input type="hidden" asp-for="Id" />
             <div class="form-group">
                 <label asp-for="Fecha" class="control-label"></label>
-                <input asp-for="Fecha" class="form-control" />
+                <input asp-for="Fecha" class="form-control" type="date"/>
                 <span asp-validation-for="Fecha" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="AlumnoId" class="control-label"></label>
-                <select asp-for="AlumnoId" class="form-control" asp-items="ViewBag.AlumnoId"></select>
+                <select asp-for="AlumnoId" class="form-control" asp-items="ViewBag.Alumnos"></select>
                 <span asp-validation-for="AlumnoId" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="CarreraId" class="control-label"></label>
-                <select asp-for="CarreraId" class="form-control" asp-items="ViewBag.CarreraId"></select>
+                <select asp-for="CarreraId" class="form-control" asp-items="ViewBag.Carreras"></select>
                 <span asp-validation-for="CarreraId" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -36,7 +36,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Guardar">Volver a la lista</a>
 </div>
 
 @section Scripts {
