--- a/Views/Inscripciones/Index.cshtml
+++ b/Views/Inscripciones/Index.cshtml
@@ -4,10 +4,10 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<h1>Inscripciones</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create">Crear nueva inscripción</a>
 </p>
 <table class="table">
     <thead>
@@ -31,15 +31,15 @@
                 @Html.DisplayFor(modelItem => item.Fecha)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Alumno.Id)
+                @Html.DisplayFor(modelItem => item.Alumno.ApellidoNombre)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Carrera.id)
+                @Html.DisplayFor(modelItem => item.Carrera.Nombre)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                <a asp-action="Edit" asp-route-id="@item.Id">Editar</a> |
+                <a asp-action="Details" asp-route-id="@item.Id">Detalles</a> |
+                <a asp-action="Delete" asp-route-id="@item.Id">Eliminar</a>
             </td>
         </tr>
 }
