--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -41,7 +41,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="AnioCarreras" asp-action="Index">Años Carrera</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Materias" asp-action="Index">Materias</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Materias" asp-action="IndexPorAnio">Materias</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="DetalleInscripciones" asp-action="Index">Detalle de Inscripcion</a>
