--- a/Views/DetalleInscripciones/Create.cshtml
+++ b/Views/DetalleInscripciones/Create.cshtml
@@ -14,16 +14,16 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="ModalidadCursado" class="control-label"></label>
-                <input asp-for="ModalidadCursado" class="form-control" />
+                <select asp-for="ModalidadCursado" asp-items="Html.GetEnumSelectList<ModalidadCursadoEnum>()" class="form-control"></select>
                 <span asp-validation-for="ModalidadCursado" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="InscripcionId" class="control-label"></label>
-                <select asp-for="InscripcionId" class ="form-control" asp-items="ViewBag.InscripcionId"></select>
+                <select asp-for="InscripcionId" class ="form-control" asp-items="ViewBag.Inscripciones"></select>
             </div>
             <div class="form-group">
                 <label asp-for="MateriaId" class="control-label"></label>
-                <select asp-for="MateriaId" class ="form-control" asp-items="ViewBag.MateriaId"></select>
+                <select asp-for="MateriaId" class ="form-control" asp-items="ViewBag.Materias"></select>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
