--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -38,13 +38,10 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Inscripciones" asp-action="Index">Inscripciones</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="AnioCarreras" asp-action="Index">Años Carrera</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="AnioCarreras" asp-action="IndexPorCarrera">Años Carrera</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Materias" asp-action="IndexPorAnio">Materias</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="AnioCarreras" asp-action="IndexPorCarrera">Años carreras</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="DetalleInscripciones" asp-action="Index">Detalle de Inscripcion</a>
