--- a/Views/AnioCarreras/IndexPorCarrera.cshtml
+++ b/Views/AnioCarreras/IndexPorCarrera.cshtml
@@ -40,14 +40,17 @@
                 @Html.DisplayFor(modelItem => item.Nombre)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Carrera.Id)
+                @Html.DisplayFor(modelItem => item.Carrera.Nombre)
             </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-            </td>
+                <td>
+                    <a asp-controller="Materias" asp-action="IndexPorAnio" asp-route-idanio="@item.Id" class="btn materias">Materias</a> |
+                    <a asp-action="Edit" asp-route-id="@item.Id" class="btn editar">Editar</a> |
+                    <a asp-action="Details" asp-route-id="@item.Id" class="btn detalles">Detalles</a> |
+                    <a asp-action="Delete" asp-route-id="@item.Id" class="btn eliminar">Eliminar</a>
+                </td>
         </tr>
 }
     </tbody>
 </table>
+
+<a asp-controller="Carreras" asp-action="Index">Volver</a>
