--- a/Views/DetalleInscripciones/Index.cshtml
+++ b/Views/DetalleInscripciones/Index.cshtml
@@ -36,11 +36,11 @@
             <td>
                 @Html.DisplayFor(modelItem => item.Materia.Nombre)
             </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-            </td>
+                <td>
+                    <a asp-action="Edit" asp-route-id="@item.Id" class="btn editar">Editar</a> |
+                    <a asp-action="Details" asp-route-id="@item.Id" class="btn detalles">Detalles</a> |
+                    <a asp-action="Delete" asp-route-id="@item.Id" class="btn eliminar">Eliminar</a>
+                </td>
         </tr>
 }
     </tbody>
