--- a/Views/Inscripciones/Index.cshtml
+++ b/Views/Inscripciones/Index.cshtml
@@ -36,11 +36,11 @@
             <td>
                 @Html.DisplayFor(modelItem => item.Carrera.Nombre)
             </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Editar</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Detalles</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Borrar</a>
-            </td>
+                <td>
+                    <a asp-action="Edit" asp-route-id="@item.Id" class="btn editar">Editar</a> |
+                    <a asp-action="Details" asp-route-id="@item.Id" class="btn detalles">Detalles</a> |
+                    <a asp-action="Delete" asp-route-id="@item.Id" class="btn eliminar">Eliminar</a>
+                </td>
         </tr>
 }
     </tbody>
