AJUSTES EN VIEWAjustes CORS

--- a/Views/AnioCarreras/IndexPorCarrera.cshtml
+++ b/Views/AnioCarreras/IndexPorCarrera.cshtml
@@ -9,7 +9,7 @@
 <h1>MOSTRANDO CARRERAS SELECCIONADAS POR AÑO</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="CreateConCarrera" asp-route-idcarrera="">Create New</a>
 </p>
 
 <form asp-controller="AnioCarreras" asp-action="IndexPorCarrera" method="post">
